--- a/news.html
+++ b/news.html
@@ -21,6 +21,15 @@
             <div class="slides-container"></div>
             <button class="next">&gt;</button>
         </section>
+        
+        <section id="add-image-section">
+            <h2>Add New Image</h2>
+            <form id="add-image-form">
+                <input type="file" id="image-file" accept="image/*" required>
+                <button type="submit">Upload Image</button>
+            </form>
+        </section>
+
         <section id="comments-section">
             <h2>Comments</h2>
             <div id="comments-list"></div>
