--- a/news.html
+++ b/news.html
@@ -21,13 +21,15 @@
             <div class="slides-container"></div>
             <button class="next">&gt;</button>
         </section>
-        
+
         <section id="add-image-section">
             <h2>Add New Image</h2>
             <form id="add-image-form">
                 <input type="file" id="image-file" accept="image/*" required>
                 <button type="submit">Upload Image</button>
             </form>
+            <!-- Success message container -->
+            <div id="success-message" style="display: none; color: green;"></div>
         </section>
 
         <section id="comments-section">
